add getChildUrlRules